test/compile-fail/resolution/conflicts/struct-fn-mod/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:2:3
  |
1 | struct b {}
  |        - previous definition of the name `b` here
2 | fn b() {}
  |    ^ `b` redefined here
